testing/Travis/testcases/prototype/shouldFail/ParserOrTypecheckFailures/phone.adl
CONTEXT TypExample IN DUTCH

RELATION reachableBy[Person*PhoneNumber]
RELATION carrier[CellPhone*Person]
RELATION number[Phone*PhoneNumber]
RELATION carrier[PhoneNumber*NetworkProvider]
RULE carrier~ ; number |- reachableBy
CLASSIFY CellPhone ISA Phone


{- Het spreekt voor zich dat de regel niet goed is getypeerd. Echter, ampersand versie 1072 klaagt hier niet over.... -}

ENDCONTEXT 